<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_return"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_conversor"/>
    <item
        android:id="@+id/action_other"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_options">
        <menu>
            <group android:id="@+id/grupo1" >
                <item
                    android:id="@+id/action_share"
                    android:icon="@drawable/ic_action_share"
                    android:orderInCategory="100"
                    android:showAsAction="ifRoom|withText"
                    android:title="@string/action_share"/>
                <item
                    android:id="@+id/action_aboutme"
                    android:icon="@drawable/ic_action_good"
                    android:orderInCategory="100"
                    android:showAsAction="ifRoom|withText"
                    android:title="@string/action_aboutme"/>
                <item
                    android:id="@+id/action_more"
                    android:icon="@drawable/ic_action_new"
                    android:orderInCategory="100"
                    android:showAsAction="ifRoom"
                    android:title="@string/action_more"/>
                <item
                    android:id="@+id/action_web"
                    android:icon="@drawable/ic_action_about"
                    android:orderInCategory="100"
                    android:showAsAction="ifRoom|withText"
                    android:title="@string/action_author"/>
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/action_twitter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_cloud"
        android:title="@string/action_twitter"/>

</menu>