<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_cloud"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_share"/>
    
    <item
        android:id="@+id/action_aboutme"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_aboutme"/>
    
    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_more"/>
    
    <item
        android:id="@+id/action_web"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_author"/>
    

</menu>